<resources>
    <string name="area">Área</string>
    <string name="app_name">PitagorasGO</string>
    <string name="perimeter">Perímetro</string>
    <string name="result">Resultado</string>}
    <string name="perimeterTextResult">El Perimetro del circulo es: </string>
    <string name="areaTextResult">El Area del circulo es: </string>
    <string name="sinTextResult">El Seno es: </string>
    <string name="cosTextResult">El Coseno es: </string>
    <string name="tanTextResult">La Tangente es: </string>
    <string name="functions"> Funciones Trigonométricas</string>
    <string name="text">¿Experimentas dificultades con las funciones trigonométricas, áreas o perímetros?</string>
    <string name="areaText">El área es la medida de la extensión de una superficie, expresada en unidades cuadradas.</string>
    <string name="perimeterText">El perímetro es la suma de las longitudes de todos los lados de una figura geométrica</string>
    <string name="functionText">Las funciones trigonométricas describen las relaciones entre los ángulos y los lados de un triángulo, como el seno, coseno y tangente.</string>
    <string name="functionInstruction">Ingresa un valor de ángulo en la siguiente celda para calcular sus funciones trigonométricas. Puedes elegir entre ingresar el valor del ángulo en grados o radianes.</string>
    <string name="motivationText">¡Explora, aprende y domina las matemáticas con nuestra aplicación!</string>
    <string name="perimeterInstruction">Introduce el valor del radio en metros en la siguiente celda para calcular el perímetro de la figura.</string>
    <string name="AreaInstruction">Introduce el valor del radio en metros en la siguiente celda para calcular el Area de la figura.</string>

</resources>