<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".MainMenuActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/background"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/viewFunction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewFunction" />

    <!-- Views of the Trigonoimetric Functions -->

    <androidx.cardview.widget.CardView
        android:id="@+id/viewFunction"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:cardBackgroundColor="@color/backgroundCard"
        app:cardCornerRadius="20dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_Function"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/img_function" />

            <TextView
                android:id="@+id/tvFunctionTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/img_Function"
                android:layout_toRightOf="@+id/img_Function"
                android:text="@string/functions"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFunction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFunctionTittle"
                android:layout_toEndOf="@+id/img_Function"
                android:layout_toRightOf="@+id/img_Function"
                android:text="@string/functionText"
                android:textColor="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!-- Views of the Area -->

    <androidx.cardview.widget.CardView
        android:id="@+id/viewArea"
        android:layout_width="match_parent"
        android:layout_height="137dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        app:cardBackgroundColor="@color/backgroundCard"
        app:cardCornerRadius="20dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewFunction">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_Area"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/img_area" />

            <TextView
                android:id="@+id/tvAreaTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/img_Area"
                android:layout_toRightOf="@+id/img_Area"
                android:text="@string/area"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAreaTittle"
                android:layout_toEndOf="@+id/img_Area"
                android:layout_toRightOf="@+id/img_Area"
                android:text="@string/areaText"
                android:textColor="@color/black" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <!-- Views of the Perimeter -->

    <androidx.cardview.widget.CardView
        android:id="@+id/viewPerimeter"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="26dp"
        app:cardBackgroundColor="@color/backgroundCard"
        app:cardCornerRadius="20dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewArea">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_Perimeter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/img_perimeterf" />

            <TextView
                android:id="@+id/tvPerimeterTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/img_Perimeter"
                android:layout_toRightOf="@+id/img_Perimeter"
                android:text="@string/perimeter"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPerimeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPerimeterTittle"
                android:layout_toEndOf="@+id/img_Perimeter"
                android:layout_toRightOf="@+id/img_Perimeter"
                android:text="@string/perimeterText"
                android:textColor="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textLive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/motivationText"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPerimeter" />

</androidx.constraintlayout.widget.ConstraintLayout>