<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".PerimeterActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/background"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/perimeter"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewPerimeter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewPerimeter" />

    <!-- Views of the Perimeter -->

    <androidx.cardview.widget.CardView
        android:id="@+id/viewPerimeter"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        app:cardBackgroundColor="@color/backgroundCard"
        app:cardCornerRadius="20dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="620dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/tvPerimeterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/perimeterText"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <ImageView
                android:id="@+id/img_cont"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/tvPerimeterText"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/img_perimeter" />

            <TextView
                android:id="@+id/tvFunctionInstructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_cont"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:text="@string/perimeterInstruction"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <LinearLayout
                android:id="@+id/layoutPerimeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvFunctionInstructions"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Radio:"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/editNumber"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:gravity="center"
                    android:inputType="number"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Metros"
                    android:textColor="@color/black" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_Calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutPerimeter"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@color/backgroundFab"
                android:text="Calcular"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/btn_Calcular"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/backgroundCard"
                app:cardCornerRadius="20dp"
                app:cardElevation="12dp"
                app:layout_constraintHorizontal_bias="0.5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/tvResultTittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:textColor="@color/background"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvResultTittle"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/perimeterTextResult"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tvResult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            tools:text="" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>